--- a/config/locales/defaults/en.yml
+++ b/config/locales/defaults/en.yml
@@ -1,4 +1,4 @@
-en-US:
+en:
   date:
     abbr_day_names:
     - Sun
@@ -192,7 +192,7 @@ en-US:
   time:
     am: am
     formats:
-      default: ! '%a, %d %b %Y %H:%M:%S %z'
-      long: ! '%B %d, %Y %H:%M'
-      short: ! '%d %b %H:%M'
+      default: ! '%a, %d %b %Y %l:%M %P %Z'
+      long: ! '%B %d, %Y %l:%M %P'
+      short: ! '%d %b %l:%M %P'
     pm: pm
