Linted yml files and rename app

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,54 +1,53 @@
-# Localization file for English. Add more files in this directory for other locales.
-
-en:
-  site_title: "Helper"
-  site_tagline: "The official unofficial fan site"
-  website: 'alanaleeders.com'
-  website2: 'alanaleeders.org'
-  facebook: 'alanaleeders'
-  twitter: 'alanaleeders'
-  nav:
-    title: "Here we go"
-    home: "Home"
-    about: "About"
-    contact: "Contact"
-  notice:
-    signed_in: "Signed in successfully."
-    signed_out: "Signed out successfully."
-    new_authentication: "New authentication was successful to your account."
-    new_user: "Congratulations, your account was successfully created and you are now signed in. Welcome!"
-    not_authorized: "I'm sorry, you are not authorized to do that. 403"
-    locale_not_supported: "Sorry, the specified locale is not supported right now."
-    help_translate: "Head over to see how to help."
-  model:
-    user:
-      dob:
-        display: "Date of birth"
-        abbr: "D.O.B."
-      age:
-        display: "Age"
-        abbr: "Age"
-        unspecified:
+﻿--- 
+en: 
+  facebook: alanaleeders
+  model: 
+    user: 
+      age: 
+        abbr: Age
+        display: Age
+        unspecified: 
           a: "A mystery"
           b: "Somewhere between 13 and 106"
           c: "That's need to know information"
           d: "Wouldn't you like to know?"
           e: "'Tis a secret"
-      email:
-        display: "Email"
-        abbr: "Email"
-      gender:
-        display: "Gender"
-        abbr: "Sex"
-        unspecified:
+      dob: 
+        abbr: D.O.B.
+        display: "Date of birth"
+      email: 
+        abbr: Email
+        display: Email
+      gender: 
+        abbr: Sex
+        display: Gender
+        unspecified: 
           a: "A mystery"
           b: "Somewhere between an elephant and a wildebeast"
           c: "That's need to know information"
           d: "Wouldn't you like to know?"
           e: "'Tis a secret"
-      name:
-        display: "Name"
-        abbr: "Name"
-      username:
-        display: "Username"
-        abbr: "Username"
+      name: 
+        abbr: Name
+        display: Name
+      username: 
+        abbr: Username
+        display: Username
+  nav: 
+    about: About
+    contact: Contact
+    home: Home
+    title: "Here we go"
+  notice: 
+    help_translate: "Head over to see how to help."
+    locale_not_supported: "Sorry, the specified locale is not supported right now."
+    new_authentication: "New authentication was successful to your account."
+    new_user: "Congratulations, your account was successfully created and you are now signed in. Welcome!"
+    not_authorized: "I'm sorry, you are not authorized to do that. 403"
+    signed_in: "Signed in successfully."
+    signed_out: "Signed out successfully."
+  site_tagline: "The official unofficial fan site"
+  site_title: Helper
+  twitter: alanaleeders
+  website: alanaleeders.com
+  website2: alanaleeders.org
