Use mixins and fix span

--- a/config/locales/views/pages/en.yml
+++ b/config/locales/views/pages/en.yml
@@ -31,7 +31,7 @@ en:
       title: Contact
     home: 
       subtitle: "Where real fans go to be fans"
-      title: Home
+      title: 'Welcome'
     updates: 
       featured_event: 
         header: "What's going on?"
