Add icons and improve language selection

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,3 +51,10 @@ en:
   twitter: alanaleeders
   website: alanaleeders.com
   website2: alanaleeders.org
+  locales:
+    -
+      - 'English'
+      - 'en'
+    -
+      - 'English (US)'
+      - 'en-US'
